--- a/app/src/main/res/layout/materia_row.xml
+++ b/app/src/main/res/layout/materia_row.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="10pt"
+    android:layout_margin="5pt"
     android:background="#FFFFFF"
     android:padding="5pt"
     >
